# è®¾ç½®æœ€ä½CMakeç‰ˆæœ¬
cmake_minimum_required(VERSION 3.10)

# è®¾ç½®é¡¹ç›®åç§°å’Œç‰ˆæœ?
project(MP4Demo VERSION 1.0)

# è®¾ç½®C++æ ‡å‡†
set(CMAKE_CXX_STANDARD 14) # å?ä»¥ä¿®æ”¹ä¸ºC++11, C++17ç­?
set(CMAKE_CXX_STANDARD_REQUIRED True)

message(STATUS "Source directory: ${CMAKE_SOURCE_DIR} ")

include_directories(
    ${CMAKE_SOURCE_DIR}/10-include
    ${CMAKE_SOURCE_DIR}/30-thirdparty/SDL2/include
    ${CMAKE_SOURCE_DIR}/30-thirdparty/FFmpeg/include
)

link_directories(
    ${CMAKE_SOURCE_DIR}/30-thirdparty/SDL2/lib
    ${CMAKE_SOURCE_DIR}/30-thirdparty/FFmpeg/lib
)


set(SOURCES
    ${CMAKE_SOURCE_DIR}/20-source/integrate.cpp
)


add_executable(${PROJECT_NAME} ${SOURCES})

target_link_libraries(
    ${PROJECT_NAME}
    avformat
    avcodec
    avdevice
    avfilter
    avutil
    swscale
    SDL2
    SDL2main
    lzma
)

